--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
     <!----------------------------------------------S T A R T   C O N T E N T-------------------------------------------->
     <main class="content container">
         <h1 class="main-title">GYM</h1>
+        <div class="inventory__sort sort">
+            <h5 class="inventory__sort-title sort-title">Отсортировать</h5>
+            <label class="inventory__sort-label sort-label">
+                По умолчанию
+                <input type="radio" name="sortInventory" value="default" class="sort-input inventory__sort-inventory-input" checked>
+            </label>
+            <label class="inventory__sort-label sort-label">
+                По алфавиту
+                <input type="radio" name="sortInventory" value="alphabet" class="sort-input inventory__sort-inventory-input">
+            </label>
+            <label class="inventory__sort-label sort-label">
+                По количеству
+                <input type="radio" name="sortInventory" value="quantity" class="sort-input inventory__sort-inventory-input">
+            </label>
+        </div>
         <div class="inventory">
             <div class="inventory__navigation navigation">
                 <h2 class="inventory__title title">Inventory</h2>
@@ -28,6 +43,21 @@
             <div class="trainers__navigation navigation">
                 <h2 class="trainers__title title">Trainers</h2>
                 <button class="trainers__create-trainers button">Добавить</button>
+            </div>
+            <div class="trainers__sort sort">
+                <h5 class="trainers__sort-title sort-title">Отсортировать</h5>
+                <label class="trainers__sort-label sort-label">
+                    По умолчанию
+                    <input type="radio" name="sortTrainers" value="default" class="sort-input trainers__sort-trainers-input" checked>
+                </label>
+                <label class="trainers__sort-label sort-label">
+                    По алфавиту
+                    <input type="radio" name="sortTrainers" value="alphabet" class="sort-input trainers__sort-trainers-input">
+                </label>
+                <label class="trainers__sort-label sort-label">
+                    По заработной плате
+                    <input type="radio" name="sortTrainers" value="wage" class="sort-input trainers__sort-trainers-input">
+                </label>
             </div>
             <ul class="trainers__list list"></ul>
         </div>
