edited trainers list to table

--- a/index.html
+++ b/index.html
@@ -59,7 +59,18 @@
                     <input type="radio" name="sortTrainers" value="wage" class="sort-input trainers__sort-trainers-input">
                 </label>
             </div>
-            <ul class="trainers__list list"></ul>
+            <table class="table">
+                <thead class="thead">
+                    <th class="th">Имя</th>
+                    <th class="th">Возраст</th>
+                    <th class="th">Специальность</th>
+                    <th class="th">Заработная плата</th>
+                    <th class="th">Редактирование</th>
+                </thead>
+                <tbody class="tbody trainers__list">
+                    
+                </tbody>
+            </table>
         </div>
         <div class="modal">
             <form class="modal__form">
